--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<body>
 		<div class="grid_container">
 			<div class="flex_container">
-				<div class="flex_item">Flex_1</div>
-				<div class="flex_item">Flex_2</div>
-				<div class="flex_item">Flex_3</div>
+				<div class="flex_item">Item1.1</div>
+				<div class="flex_item">Item1.2</div>
+				<div class="flex_item">Item1.3</div>
 			</div>
             <div class="grid_item_2">Item 2</div>
             <div class="grid_item_3">Item 3</div>
