--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 				<div class="flex_item">Item1.2</div>
 				<div class="flex_item">Item1.3</div>
 			</div>
-            <div class="grid_item_2">Item 2</div>
+            <div class="grid_item_2">
+				<label for="input_2" style="color: white;">Input_2: </label>
+				<input type="text" id="input_2" list="options">
+				<datalist id="options">
+					<option value="a">
+					<option value="b">
+				</datalist>
+			</div>
             <div class="grid_item_3">Item 3</div>
 
 		</div>
