--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 				<label for="input_2" style="color: white;">Input_2: </label>
 				<input type="text" id="input_2" list="options">
 				<datalist id="options">
-					<option value="a">
-					<option value="b">
+					<option value="a"></option>
+                <option value="b"></option>
 				</datalist>
 			</div>
-            <div class="grid_item_3">Item 3</div>
-
+            <div class="grid_item_3">
+				<label for="input_3" style="color: white;">Input_3:</label>
+				<select id="input_3">
+					<option value="Option 1">Option 1</option>
+                <option value="Option 2">Option 2</option>
+				</select>
+			</div>
 		</div>
 	</body>
 </html>
